--- a/config.example
+++ b/config.example
@@ -3,6 +3,7 @@
     "nick": "botnick",
     "channel": "#fightchannel",
     "auxchans": ["#auxchannel1", "#auxchannel2"],
+    "stats-url": "http://example.org",
     "nickserv-user": "botusername",
     "nickserv-pass": "botpassword"
 }
