Changes the \!top functionality to use a small modifier against the number of fights to slightly increase your overall standing against an opponent with less total fights

--- a/config.example
+++ b/config.example
@@ -6,5 +6,6 @@
     "tls": true,
     "nickserv_username": "dong",
     "nickserv_password": "yourpasswd",
-    "auxchans": []
+    "auxchans": [],
+    "top_modifier_num_fights": 0.05
 }
