Feature/top fights modifier (#62)
Changes the \!top functionality to use a small modifier against the number of fights to slightly increase your overall standing against an opponent with less total fights

--- a/config.example
+++ b/config.example
@@ -7,5 +7,6 @@
     "nickserv_username": "dong",
     "nickserv_password": "yourpasswd",
     "auxchans": [],
-    "extendedcommands": ["jaden","excuse","dong"]
+    "extendedcommands": ["jaden","excuse","dong"],
+    "top_modifier_num_fights": 0.05
 }
