Adds repo and version commands because we never know what ravioli is up to and I'm pretty bored

--- a/config.example
+++ b/config.example
@@ -8,5 +8,6 @@
     "nickserv_password": "yourpasswd",
     "auxchans": [],
     "extendedcommands": ["jaden","excuse","dong"],
-    "topmodifier": 0.05
+    "topmodifier": 0.05,
+    "repolink": "https://github.com/tonyravioli/dongerdong"
 }
