Removes repo from config and instead puts it directly in the source because apparently that's a good way to do software engineering

--- a/config.example
+++ b/config.example
@@ -8,6 +8,5 @@
     "nickserv_password": "yourpasswd",
     "auxchans": [],
     "extendedcommands": ["jaden","excuse","dong"],
-    "topmodifier": 0.05,
-    "repolink": "https://github.com/tonyravioli/dongerdong"
+    "topmodifier": 0.05
 }
