Adding example stats url. Is there a way to comment in these JSONs? cause you can totally take this URL line out and it wont break

--- a/config.example
+++ b/config.example
@@ -8,5 +8,6 @@
     "nickserv_password": "yourpasswd",
     "auxchans": [],
     "extendedcommands": ["jaden","excuse","dong"],
-    "topmodifier": 0.05
+    "topmodifier": 0.05,
+    "stats-url": "http://www.donger.org/stats/"
 }
