Adding the new "admins" config option to the example config file

--- a/config.example
+++ b/config.example
@@ -9,5 +9,6 @@
     "auxchans": [],
     "extendedcommands": ["jaden","excuse","dong"],
     "topmodifier": 0.05,
+    "admins": ["Polsaker", "ravioli"],
     "stats-url": "http://www.donger.org/stats/"
 }
